# uta-method

./: README.md  pyproject.toml  requirements.txt  solver_examples.py  uta.py
data/: dataset.csv
