[project]
name = "da2project"
version = "0.1.0"
description = "DA Project 2"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mateusz Idziejczak (155842)", email = "mateusz.idziejczak@student.put.poznan.pl" },
    { name = "Mateusz Stawicki (155900)", email = "mateusz.stawicki@student.put.poznan.pl" }
]
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pulp>=3.1.1",
]
[[tool.mypy.overrides]]
module = "pulp.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true